crates/cheers/tests/ui/invalid_datastar_modifier.rs
use cheers::prelude::*;

fn main() {
    let _ = html! {
        div !on_interval[prevent]("count++") {}
    };
}
